move kitty tabs to top and slant.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -130,3 +130,7 @@ foreground       #c0b18b
 
 # The background color
 background       #262626
+
+# Tab Config
+tab_bar_edge top
+tab_bar_style slant
