update url used for lazyvim submod

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
 	branch = main
 [submodule ".config/nvim"]
 	path = .config/nvim
-	url = git@github.com:LazyVim/starter.git
+	url = https://github.com/LazyVim/starter.git
 	branch = main
