--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -53,14 +53,13 @@ mouse_hide_wait 0.0
 # The enabled window layouts. A comma separated list of layout names. The special value * means
 # all layouts. The first listed layout will be used as the startup layout.
 # For a list of available layouts, see the file layouts.py
-enabled_layouts *
 
 # If enabled, the window size will be remembered so that new instances of kitty will have the same
 # size as the previous instance. If disabled, the window will initially have size configured
 # by initial_window_width/height, in pixels.
 remember_window_size   no
-initial_window_width   640
-initial_window_height  400
+initial_window_width   1000
+initial_window_height  650 
 
 # Delay (in milliseconds) between screen updates. Decreasing it, increases fps
 # at the cost of more CPU usage. The default value yields ~100fps which is more
@@ -110,27 +109,29 @@ window_margin_width 15
 # For example:
 #
 symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 PowerlineSymbols
-hide_window_decorations no 
+hide_window_decorations titlebar-only 
 
 # Change the color of the kitty window's titlebar on macOS. A value of "system"
 # means to use the default system color, a value of "background" means to use
 # the default background color and finally you can use an arbitrary color, such
 # as #12af59 or "red".
-macos_titlebar_color background 
+# macos_titlebar_color background 
 
 allow_remote_control yes
 
 # BEGIN_KITTY_THEME
-# Tomorrow Night Eighties
+# Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
 
 # The foreground color
-foreground       #c0b18b
+# foreground       #c0b18b
 
 # The background color
-background       #262626
+# background       #262626
 
 # Tab Config
 tab_bar_edge top
 tab_bar_style slant
+
+dec
